--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.2",
+    "mongoose": "^8.18.0",
     "next": "15.4.6",
     "postcss": "^8.5.6",
     "react": "19.1.0",
