--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-
-    "mongoose": "^8.18.0",
     "axios": "^1.11.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^17.2.2",
+    "leaflet": "^1.9.4",
     "mongoose": "^8.18.0",
     "next": "15.4.6",
     "next-auth": "^4.24.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
