--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^17.2.2",
+    "ethers": "^6.15.0",
     "leaflet": "^1.9.4",
     "mongoose": "^8.18.0",
     "next": "15.4.6",
