--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@zxing/browser": "^0.1.5",
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^17.2.2",
+    "jsqr": "^1.4.0",
     "leaflet": "^1.9.4",
     "mongoose": "^8.18.0",
+    "mqtt": "^5.14.1",
     "next": "15.4.6",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.10.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
-    "tailwindcss": "^3.4.17"
+    "react-qr-reader": "^3.0.0-beta-1",
+    "tailwindcss": "^3.4.17",
+    "webrtc-adapter": "^9.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
