--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^4.0.2",
+    "@stripe/stripe-js": "^7.9.0",
     "@zxing/browser": "^0.1.5",
-    "axios": "^1.11.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
+    "classnames": "^2.5.1",
     "dotenv": "^17.2.2",
     "ethers": "^6.15.0",
     "jsqr": "^1.4.0",
@@ -21,10 +24,13 @@
     "next": "15.4.6",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.10.1",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-qr-reader": "^3.0.0-beta-1",
+    "stripe": "^18.5.0",
     "tailwindcss": "^3.4.17",
     "webrtc-adapter": "^9.0.3"
   },
